@@ -1,6 +1,7 @@
 Changes for 2.2.7rc1
 
 New features:
+...G...... [ZBX-8503] increased limitation of command length for remote commands with agent (Sasha)
 A.F....... [ZBX-1357] updated Chinese (Taiwan) and Polish translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
